--- a/src/main/resources/static/public/lib/css/styles.css
+++ b/src/main/resources/static/public/lib/css/styles.css
@@ -1,3 +1,17 @@
 form .error {
     color: #A94442
 }
+
+.event-img img {
+    height: 130px;
+    width: 200px;
+}
+
+.profile-picture img {
+    height: 200px;
+    width: 200px;
+}
+
+.glyph-big {
+    font-size: 2em;
+}
