--- a/src/main/resources/static/public/lib/css/styles.css
+++ b/src/main/resources/static/public/lib/css/styles.css
@@ -2,6 +2,31 @@ form .error {
     color: #A94442
 }
 
+.font-md{
+    font-size: 20px;
+}
+.font-sm{
+    font-size: 12px;
+}
+
+h1 .font-title {
+    font-size: 48px;
+}
+
+.no-margin {
+    margin: 0px;
+}
+
+.margin-bot-sm {
+    margin-bottom: 5px;
+}
+.margin-bot {
+    margin-bottom: 20px;
+}
+.margin-right-sm {
+    margin-right: 5px;
+}
+
 .event-img img {
     height: 130px;
     width: 200px;
