Refactoring, angularjs, front-end improvements

--- a/src/main/resources/static/public/lib/views/friendsJS.html
+++ b/src/main/resources/static/public/lib/views/friendsJS.html
@@ -1,6 +1,6 @@
-<%@include file="includes/header.jsp" %>
+<div class="container">
+    <div class="row ">
         <div class="col-xs-6 col-sm-3 id="sidebar">
-
             <div class="row">
                 <div class="col-sm-6 column">
                     <h3 style="margin-top: 0">Friends</h3>
@@ -11,7 +11,6 @@
                     </button>
                 </div>
             </div>
-
             <div class="list-group">
                 <a class="list-group-item active">
                     <div class="row clearfix">
@@ -143,6 +142,7 @@
                                                 <small class="col-lg-10">Arnab Goswami: "Some people close to Congress Party and close to the government had a #secret #meeting in a farmhouse in Maharashtra in which Anna Hazare send some representatives and they had a meeting in the discussed how to go about this all fast and how eventually this will end."</small>
                                             </div>
                                         </div>
+
                                     </div>
 
                                     <div class="send-wrap ">
@@ -164,6 +164,8 @@
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
-<%@include file="includes/footer.jsp" %>
+    </div>
+</div>
