--- a/material-design-colour-change.less
+++ b/material-design-colour-change.less
@@ -1,4 +1,4 @@
 @import "src/main/resources/static/public/lib/bower_components/bootstrap-material-design/less/material-wfont.less";
-@import "src/main/resources/static/public/lib/bower_components/bootstrap-material-design/less/_colors.less";
+//@import "src/main/resources/static/public/lib/bower_components/bootstrap-material-design/less/_colors.less";
 // Override @primary color with one took from _colors.less
-@primary: @pink-500;
+@primary: #E91E63;
