More and more visual updates

--- a/src/main/resources/static/public/lib/css/style.css
+++ b/src/main/resources/static/public/lib/css/style.css
@@ -8,6 +8,8 @@ form .error {
 
 body { padding-top: 70px; }
 
+.thumbnail img { min-height:120px; height:120px; }
+
 .footer {
     text-align: right;
 }
