Minor improvement of home page css

--- a/src/main/resources/static/public/lib/css/style.css
+++ b/src/main/resources/static/public/lib/css/style.css
@@ -24,6 +24,10 @@ body {
     min-height:100%;
 }
 
+.modal {
+    padding-top: 50px;
+}
+
 .thumbnail img { 
     min-height:120px; 
     height:120px; 
