--- a/src/main/resources/static/public/lib/css/style.css
+++ b/src/main/resources/static/public/lib/css/style.css
@@ -10,6 +10,13 @@ form .error {
     border: 1px solid #000;
 }
 
+#dropdown-menu h2 {
+    padding: 14px;
+    margin: 0;
+    font-size: 16px;
+    font-weight: 400;
+}
+
 .foot-background{
     background: url(/public/lib/assets/foot.jpg) no-repeat center center ;
 }
@@ -39,7 +46,7 @@ body {
 
 .animated {
     transition: all linear 0.5s;
-    opacity:1;
+    opacity:0.85;
 }
 
 .animated.ng-hide {
@@ -47,7 +54,7 @@ body {
 }
 
 .animated:hover {
-    opacity:0.85;
+    opacity:1;
 }
 
 .radio label .circle{
